# CytoTable-benchmarks

./: .gitignore  .pre-commit-config.yaml  README.md  profile.json  pyproject.toml
.github/workflows/: arrow-benchmarks.yml
notebooks/: arrow_analysis.ipynb  arrow_analysis.py  create_example_data.ipynb  create_example_data.py  cytotable_and_pycytominer_analysis.ipynb  cytotable_and_pycytominer_analysis.py  duckdb_analysis.ipynb  duckdb_analysis.py  parquet_analysis.ipynb  parquet_analysis.py  utilities.py
notebooks/cytotable-issue-75/: cytotable_looped_memory_usage.ipynb  cytotable_looped_memory_usage.py  cytotable_objgraph.ipynb  cytotable_objgraph.py  duckdb_looped_memory_usage.ipynb  duckdb_looped_memory_usage.py  pyarrow_looped_memory_usage.ipynb  pyarrow_looped_memory_usage.py
notebooks/cytotable-issue-75/examples/: duckdb_parquet_reads_close-numeric.py  duckdb_parquet_reads_close.py  duckdb_parquet_reads_no_close-numeric.py  duckdb_parquet_reads_no_close.py  loop_cytotable_memory_one.py  loop_cytotable_memory_two.py  pyarrow_parquet_reads.py  pyarrow_parquet_reads_jemalloc.py  pyarrow_parquet_reads_jemalloc_memorymap.py  pyarrow_parquet_reads_malloc_memorymap.py  pyarrow_parquet_reads_mimalloc.py  pyarrow_parquet_reads_mimalloc_memorymap.py  sleep_example.py  sleep_example_gc.py
notebooks/cytotable-scalability/: cytotable-and-pycytominer.ipynb  cytotable-and-pycytominer.py
notebooks/cytotable-scalability/tests/: cytotable-examplehuman.py  cytotable-nf1-schwanncell.py
notebooks/examples/: cytotable_convert_nf1.py  generate_parquet_data.py  join_duckdb.py  join_pandas.py  pycytominer_merge_nf1.py
