[tool.poetry]
name = "cytotable-benchmarks"
version = "0.0.1"
description = "Benchmarks for CytoTable and related."
authors = ["d33bs <dave.bunten@cuanschutz.edu>"]
license = "BSD 3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
jupyterlab = "^3.0.0"
cytotable = {git = "https://github.com/d33bs/CytoTable.git", branch="gc-object-leaks" }
black = "^23.3.0"
isort = "^5.12.0"
jupyterlab-code-formatter = "^2.2.1"
ipyflow = "^0.0.176"
pandas = "^2.0.2"
numpy = "^1.25.0"
sqlalchemy = "^2.0.16"
jupytext = "^1.14.6"
matplotlib = "^3.7.1"
plotly = "^5.15.0"
pympler = "^1.0.1"
pyarrow = "^12.0.0"
polars = "^0.18.4"
kaleido = "0.2.1"
memray = "^1.8.1"
duckdb = "^0.8.0"
parsl = "^2023.4.24"
cloudpathlib = "^0.13.0"
objgraph = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.vulture]
min_confidence = 80
paths = ["notebooks"]
sort_by_size = true
verbose = true
