[tool.poetry]
name = "cytotable-benchmarks"
version = "0.0.1"
description = "Benchmarks for CytoTable and related."
authors = ["d33bs <dave.bunten@cuanschutz.edu>"]
license = "BSD 3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.11.0"
jupyterlab = "^3.0.0"
pycytominer = { git = "https://github.com/cytomining/pycytominer.git" }
cytotable = { git = "https://github.com/cytomining/cytotable.git" }
black = "^23.3.0"
isort = "^5.12.0"
jupyterlab-code-formatter = "^2.2.1"
ipyflow = "^0.0.176"
numpy = "^1.25.0"
sqlalchemy = ">=1.3.6, <2"
jupytext = "^1.14.6"
matplotlib = "^3.7.1"
plotly = "^5.15.0"
pympler = "^1.0.1"
pyarrow = ">=13.0.0"
duckdb = ">=0.7.1"
polars = "^0.18.4"
kaleido = "0.2.1"
memray = "^1.8.1"
scalene = "^1.5.31.1"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.vulture]
min_confidence = 80
paths = ["notebooks"]
sort_by_size = true
verbose = true

[tool.jupytext]
formats = "ipynb,py:light"
